# kservice

autotests/: CMakeLists.txt  kplugininfotest.cpp  kpluginmetadatatest.cpp  pluginlocatortest.cpp  pluginlocatortest.h
src/: CMakeLists.txt
src/kpluginindexer/: CMakeLists.txt  delete-kpluginindex.sh  kpluginindexer.cpp  kpluginindexer.h  main.cpp
src/plugin/: kplugintrader.cpp
src/services/: kplugininfo.cpp  kplugininfo.h  ktraderparsetree.cpp  ktraderparsetree_p.h
